# meowmotion

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.py  test_data_formatter.py  test_modeling.py  test_od.py  validation.ipynb
.github/workflows/: deploy.yml  docs.yml  full.yml
about/: index.html
artifacts/: decision_tree_trained_model.pkl  label_encoder.joblib
docs/: about.md  documentation.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: data_formatter.md  meowmob.md  model_tmd.md  process_data.md
examples/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
meowmotion/: ReadJson.py  data_formatter.py  extract_travelAI_like_data.py  huq_prediction.ipynb  meowmob.py  model_tmd.py  process_data.py
meowmotion/trip_gen/: od_calculation.py
reference/data_formatter/: index.html
reference/meowmob/: index.html
reference/model_tmd/: index.html
reference/process_data/: index.html
search/: search_index.json
tests/: test_extract_travelAI_like_data.py  test_meowmob.py
travel_mode_detection/: ReadJson.py  extract_travelAI_like_data.py  huq_prediction.ipynb  machine_learning_tmd.ipynb
