[tool.poetry]
name = "travel-mode-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
imblearn = "^0.0"
geopandas = "^1.0.1"
pre-commit = "^4.1.0"
haversine = "^2.9.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.5"
folium = "^0.19.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
