[tool.poetry]
name = "meowmotion"
version = "0.1.2"
description = "Mobile phone GPS data processor for trip generation and travel mode detection"
authors = ["Faraz M. Awan <faraz.awan0406@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://urbanbigdatacentre.github.io/meowmotion/"
repository = "https://github.com/urbanbigdatacentre/meowmotion"
keywords = ["GPS", "mobility", "trip detection", "travel mode", "data processing"]

[tool.poetry.dependencies]
python = "^3.11"

# Core libraries
numpy = "^1.26.4"
pandas = "1.5.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
scikit-learn = "^1.4.2"
imbalanced-learn = "^0.12.0"

# Geo-related
geopandas = "0.10.2"
folium = "0.12.1.post1"
scikit-mobility = "^1.3.1"
haversine = "^2.9.0"

# Misc
python-dotenv = "^1.0.1"
pre-commit = "^4.1.0"
fiona = "1.8.22"
rtree = "^1.4.0"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}
mkdocs-material = "^9.6.11"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
